--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -60,7 +60,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 4
             </h2>
             <p>
 
@@ -70,7 +70,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 7
             </h2>
             <p>
 
@@ -80,7 +80,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 10
             </h2>
             <p>
 
@@ -90,7 +90,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 2
             </h2>
             <p>
 
@@ -100,7 +100,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 5
             </h2>
             <p>
 
@@ -110,7 +110,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 8
             </h2>
             <p>
 
@@ -120,7 +120,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 11
             </h2>
             <p>
 
@@ -130,7 +130,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 3
             </h2>
             <p>
 
@@ -140,7 +140,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 6
             </h2>
             <p>
 
@@ -150,7 +150,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 9
             </h2>
             <p>
 
@@ -160,7 +160,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="yolo ca fait quoi ca ???" width="100%" height="100%" />
             </div>
-            <h2> Alexandra Renaud (Capitaine)
+            <h2> case 12
             </h2>
             <p>
 
